# simple_json

./: .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresetttest.json  CMakeUserPresets.json  README.md  build.bat  build.sh  test.json  vcpkg.json
inc/: common.hpp  json.hpp  simple_json.hpp  utf8handler.hpp
inc/json/: common.hpp  json.hpp  jsonobject.hpp  jsonvalue.hpp  utf8handler.hpp
src/: CMakeLists.txt  json.cpp  jsonobject.cpp  jsonvalue.cpp  main.cpp  utf8handler.cpp
test/: CMakeLists.txt  test_jsonobject.cpp  test_jsonobject.hpp
